# Agentic-LLM-Chatbot-System

./: .gitignore  main.py  pyproject.toml  requirements.txt
1-BasicChatbot/: BasicChatbot.ipynb  chatbot.ipynb
2-HumanAssistance/: humaninloop.ipynb
3-Debugging/: agent.py  langgraph.json
3-Debugging/.langgraph_api/: .langgraph_ops.pckl
Agents/: multiaiagents.ipynb
Tests/: test_chatbot.py  test_human_in_loop.py  test_multi_agent.py  test_multi_agent_supervisor.py  test_react_agent.py
config/: settings.py
notebooks/1-BasicChatbot/: chatbot.ipynb
notebooks/2-HumanAssistance/: humaninloop.ipynb
notebooks/3-Debugging/: agent.py  debugging.ipynb
notebooks/3-Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_retry_counter.pckl
notebooks/Agents/: multiaiagents.ipynb
src/agents/: __init__.py  base.py  chatbot.py  human_in_loop.py  multi_agent.py  multi_agent_supervisor.py  react_agent.py
tools/: __init__.py  custom.py  human_assistance.py  search.py
